--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,19 @@ set -g prefix M-a
 unbind C-b
 bind M-a send-prefix
 
+# Usability
 set -s escape-time 0
 set -g mouse on
 set -g mode-keys vi
+
+# Status Bar
+set -g status-right '#{prefix_highlight} | %a'
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
+
+run '~/.tmux/plugins/tpm/tpm'
