--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,7 @@ bind M-a send-prefix
 set -s escape-time 0
 set -g mouse on
 set -g mode-keys vi
+set -g default-terminal "xterm-256color"
 
 # Status Bar
 set -g status-right '#{prefix_highlight} | %a'
@@ -15,6 +16,6 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 
 run '~/.tmux/plugins/tpm/tpm'
